fixed logo and header alignment

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -36,7 +36,6 @@
 .container {
   position: relative;
   width: 100%;
-  /*max-width: 960px;*/
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
@@ -69,11 +68,7 @@ h4, h5{
 
 }
 
-.block {
-  background-color: #f7f7f7;
-}
-
-/* HEADER and NAVBAR 
+/* HEADER, FOOTER, NAVBAR
 _________________________________________________________________*/
 
 .footer {
@@ -104,7 +99,6 @@ header {
   width: 100vw;
   height: 60vh;
   background: url("../images/home/purple-oj-hike-small.png") no-repeat center center fixed;
-  background-size: cover;
   position: relative;
   color: #ffffff;
   /*background: url(../images/home/teal-blue-hike.png) no-repeat center center fixed;*/
@@ -115,6 +109,7 @@ header {
   height: 60vh;
   width: 100%;
   display: table;
+  top: 0;
 }
 .hero h4 {
   color: #ffffff;
@@ -123,27 +118,22 @@ header {
 }
 
 
-#cover { 
-  background-size: cover; 
+#cover {
+  background-size: cover;
 }
 
-/*header h2 {
-  color: #ffffff;
-  margin-top: 10%;
-  
-}*/
-
-.navbar {
+/*.navbar {
   display: block;
   width: 100%;
   z-index: 90;
-  height: 0px; /*but this makes logo unclickable*/
-  /*background-color: rgba(193,66,66,0.2); /*#1F1F2C;(12,170,162,0.5);(52,43,127,0.5);*/
+  height: 0px; /*but this makes logo unclickable
+  background-color: rgba(193,66,66,0.2); /*#1F1F2C;(12,170,162,0.5);(52,43,127,0.5);
   margin-top: 0px;
 }
+*/
 
 
-.hamburger {
+.hamburger { /*not currently using*/
   z-index: 1000;
   color: #ffffff;
   text-decoration: none;
@@ -153,12 +143,17 @@ header {
   margin-bottom: 1.5rem;
 }
 
-.navbar img {
-  max-width: 10%;
-  min-width: 100px;
-  margin-top: 1.8rem;
+.navbar-logo {
+  position: relative;
+  float: left;
+  margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   z-index: 99;
+
+}
+.navbar-logo img {
+  max-width: 10%;
+  min-width: 100px;
 }
 
 .navbar-item {
@@ -169,13 +164,13 @@ header {
   z-index: 99;
 }
 
-.navbar-item ul > li { 
+.navbar-item ul > li {
    list-style-type: none;
    display: inline-block;
    font-size: 16px;
    font-weight: 100;
    margin-left: 25px;
-   
+
 }
 
 .navbar-item ul > li > a {
@@ -186,32 +181,15 @@ header {
   color: #9bfef3; }
 
 
-
-/*header h4 {
-  color: #ffffff;
-  font-family: "Source Sans Pro", "roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  margin-bottom: 2rem;
-  margin-top: 200px;
-
-}*/
-
-
-
-
-
-/* PROJECTS */
+/* PROJECTS __________________________________________________*/
 
 .project {
   position: relative;
-  
   height: 600px;
-  width: 100vw;
+  width: 100%;
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  /*background-image: url("../images/flytabs/flytabs-header2.png");*/
-  background-size: cover;
 }
 
 .project img {
@@ -221,7 +199,7 @@ header {
 
 .project h4 {
   margin-top: 50px;
-} 
+}
 
 
 a.btn-outline {
@@ -231,8 +209,6 @@ a.btn-outline {
   */
   text-decoration: none;
   color: #0CAAA2;
-  
-
 }
 a.btn-outline:hover {
   color: #0ecac0;
@@ -247,7 +223,7 @@ a.tealbutton:hover { font-size: 0; }
 
 a.tealbutton:hover:before {
   font-size: 1.9rem;
-  content: attr(data-hover);
+  content: attr(data-hover); /*change text on hover*/
 }
 
 .project2 {
@@ -265,8 +241,7 @@ a.tealbutton:hover:before {
 .about {
   position: relative;
   background-size: cover;
-
-  width: 100vw;
+  width: 100%;
   text-align: center;
   margin-top: 50px;
   margin-bottom: 60px;
@@ -282,11 +257,11 @@ a.tealbutton:hover:before {
 
 
 
-/* About Me ------------ */
+/* About Me____________________________________________________ */
 .about-header {
   width: 100%;
   height: 60vh;
-  background: url("../images/about/aboutme-header.png") no-repeat center center fixed;
+  background: url("../images/about/aboutme-header.png") no-repeat left fixed;
 }
 
 .content {
@@ -294,7 +269,7 @@ a.tealbutton:hover:before {
   /*text-align: justify;*/
 }
 .content,
-.content2, 
+.content2,
 h1 {
   color: #1F1F2C;
 }
@@ -336,8 +311,8 @@ body img {
 
 .flytabs-header {
   width: 100%;
-  height: 100vh;
-  background: url("../images/flytabs/flytabs-main-photo2.png") center;
+  height: 130vh;
+  background: url("../images/flytabs/flytabs-main-photo2 copy.png") center;
 }
 
 .case-header-content {
@@ -345,7 +320,7 @@ body img {
   text-align: center;
   position: absolute;
   width: 100%;
-  bottom: 0;
+  padding-top: 45%;
 
 }
 .case-header-content h1{
@@ -361,13 +336,13 @@ body img {
   text-align: justify;
 }
 .flytabs-problem {
-  background: url("../images/flytabs/flytabs-header-teal.png") center fixed; 
+  background: url("../images/flytabs/flytabs-header-teal.png") center fixed;
   background-size: cover;
   padding: 50px 0px 50px 0px;
   text-align: left;
 }
 .flytabs-solution {
-  background: url("../images/flytabs/flytabs-problem.png") center fixed; 
+  background: url("../images/flytabs/flytabs-problem.png") center fixed;
   background-size: cover;
   padding: 50px 0px 50px 0px;
   text-align: left;
@@ -401,7 +376,7 @@ body img {
 /* RESPONSIVENESS */
 /* Larger than mobile */
 @media (min-width: 400px) {
-  /*header h2 { 
+  /*header h2 {
   margin-top: 40%;
   }*/
   .firstbreak {
@@ -409,6 +384,16 @@ body img {
   }
   .navbar-item {
     text-align: center;
+  }
+
+
+  .case-header-content {
+    color: #f7f7f7;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+
   }
 }
 
@@ -423,7 +408,7 @@ body img {
   .navbar-item {
     display: inline-block;
   }
- 
+
   .alignleft {
     text-align: left;
     padding-left: 15px;
@@ -435,6 +420,12 @@ body img {
   .project {
     height: 380px;
   }
+  .flytabs-header {
+    width: 100%;
+    height: 100vh;
+    background: url("../images/flytabs/flytabs-main-photo2.png") center;
+  }
+
 }
 
 /* Larger than tablet */
@@ -442,7 +433,7 @@ body img {
   .navbar-item {
     display: inline-block;
   }
-  /*header h2 { 
+  /*header h2 {
     margin-top: 20%;
   }*/
 
@@ -469,12 +460,8 @@ body img {
   {
     padding: 50px 200px 50px 200px;
   }
-  /*.content2 {
-    padding: 50px 200px 50px 200px;
-  }
-  .problem {
-  padding: 50px 200px 50px 200px;
-}*/
+
+
 }
 
 /* Larger than Desktop HD */
@@ -482,10 +469,10 @@ body img {
   .navbar-item {
     display: inline-block;
   }
-  /*header h2 { 
+  /*header h2 {
     margin-top: 25%;
   }*/
- 
+
 }
 
 
@@ -580,7 +567,7 @@ body {
   font-weight: 500;
   font-family: "Source Sans Pro", "Cabin", sans-serif;
   color: #1F1F2C; }
-  
+
 @media (min-width: 1000px) {
   .navbar-item {
     display: inline-block;
@@ -615,7 +602,7 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  margin-top: 0; 
+  margin-top: 0;
   color: #1F1F2C;
   }
 
@@ -623,7 +610,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #0CAAA2; 
+  color: #0CAAA2;
   text-decoration: none;
   font-weight: 500;
   }
@@ -792,7 +779,7 @@ pre > code {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
 td {
-  
+
   font-size: 16px;
   padding: 12px 15px;
   text-align: left;
